# cloudera.exe

./: .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.rst  CONTRIBUTING.md  README.md  TESTING.md  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  requirements_aws.txt  requirements_azure.txt  requirements_gcp.txt  tox-ansible.ini
.config/molecule/: config.yml
.github/workflows/: ansible-lint.yml  label_pr.yml  pre-commit.yml  publish_galaxy.yml  reset_pr.yml  validate_pr.yml  validate_pr_docs.yml
builder/: requirements.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
docs/: configuration.md  configuration.yml  design.md  links.yml  runlevels.md
docs/docsite/: config.yml  extra-docs.yml  links.yml
docsbuild/: antsibull-docs.cfg  build.sh  conf.py
meta/: runtime.yml
playbooks/: pbc_infra_setup.yml  pbc_infra_teardown.yml  pbc_setup.yml  pbc_teardown.yml  pvc_base_postfix.yml  pvc_base_prereqs_ext.yml  pvc_base_prereqs_int.yml  pvc_base_setup.yml  pvc_base_teardown.yml  pvc_renew_certs.yml
plugins/filter/: cm_version.py  combine_onto.yml  core_exe.py  version.yml
plugins/lookup/: supported.py
plugins/module_utils/: cldr_supported.py  cldr_version.py
plugins/modules/: cm_prepare_db.py  deprecation.py  jdk_facts.py  supported.py
plugins/test/: cldr.py  version.yml
roles/: blackbox  nodeexporter
roles/auto_repo_mirror/: README.md
roles/blackbox/: README.md
roles/caddy/: README.md
roles/cm_agent/: README.md
roles/cm_csd/: README.md
roles/cm_repo/: README.md
roles/cm_repo_local/: README.md
roles/cm_server/: README.md
roles/common/: README.md
roles/data/: README.md  config-wip.yml
roles/docker/: README.md
roles/dynamic_inventory/: README.md
roles/efm/: README.md
roles/freeipa_client/: README.md
roles/freeipa_host_group/: README.md
roles/freeipa_server/: README.md
roles/freeipa_server_ecs/: README.md
roles/freeipa_server_enrolled_tls/: README.md
roles/freeipa_server_unenrolled_tls/: README.md
roles/freeipa_server_users/: README.md
roles/freeipa_server_wildcard_profile/: README.md
roles/grafana/: README.md
roles/info/: README.md
roles/init_deployment/: README.md
roles/keycloak_container/: README.md
roles/keycloak_users/: README.md
roles/minifi_agent_cpp/: README.md
roles/minifi_agent_java/: README.md
roles/mount/: README.md
roles/nodeexporter/: README.md
roles/pgadmin/: README.md
roles/platform/: .ansible-lint  .yamllint
roles/postgresql_client/: README.md
roles/postgresql_server/: README.md
roles/prereq_accumulo/: README.md
roles/prereq_activitymonitor/: README.md
roles/prereq_atlas/: README.md
roles/prereq_cloudera_manager/: README.md
roles/prereq_cloudera_users/: README.md
roles/prereq_cm_database/: README.md
roles/prereq_database/: README.md
roles/prereq_dataviz/: README.md
roles/prereq_dataviz_database/: README.md
roles/prereq_druid/: README.md
roles/prereq_ecs/: README.md
roles/prereq_efm/: README.md
roles/prereq_efm_database/: README.md
roles/prereq_firewall/: README.md
roles/prereq_flink/: README.md
roles/prereq_flume/: README.md
roles/prereq_freeipa_client/: README.md
roles/prereq_hadoop/: README.md
roles/prereq_hbase/: README.md
roles/prereq_hdfs/: README.md
roles/prereq_hive/: README.md
roles/prereq_hive_database/: README.md
roles/prereq_httpfs/: README.md
roles/prereq_hue/: README.md
roles/prereq_hue_database/: README.md
roles/prereq_impala/: README.md
roles/prereq_jdk/: README.md
roles/prereq_kafka/: README.md
roles/prereq_kerberos/: README.md
roles/prereq_kernel/: README.md
roles/prereq_keytrustee/: README.md
roles/prereq_kms/: README.md
roles/prereq_knox/: README.md
roles/prereq_knox_database/: README.md
roles/prereq_kudu/: README.md
roles/prereq_livy/: README.md
roles/prereq_local_account/: README.md
roles/prereq_mapreduce/: README.md
roles/prereq_network_dns/: README.md
roles/prereq_nifi/: README.md
roles/prereq_nifiregistry/: README.md
tests/: config.yml
(+1226 files in other folders)
