[project]
name = "exe"
dynamic = ["version"]
description = "cloudera.exe Ansible collection"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []

authors = [{ name = "Webster Mudge", email = "wmudge@cloudera.com" }]
classifiers = []
dependencies = []

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.version]
path = "galaxy.yml"
pattern = "version:\\s+(?P<version>[\\d\\.]+)"
scheme = "semver"
validate-bump = true

[tool.hatch.envs.default]
python = "3.12"
detached = true
dependencies = [
  "pre-commit",
  "coverage[toml]",
  "pytest",
  "molecule",
  "molecule-plugins",
  "molecule-plugins[ec2]",
  "ansible-core<2.17",     # For RHEL 8 support
  "ansible-lint",
  "antsibull-docs >= 2.0.0, < 3.0.0",
  "jmespath",
]

[tool.hatch.envs.default.scripts]
lint = [
  "pre-commit run -a",
  "antsibull-docs lint-collection-docs --plugin-docs --validate-collection-refs=all --skip-rstcheck .",
]

[tool.hatch.envs.docs]
python = "3.12"
detached = true
extra-dependencies = [
  "ansible-core<2.17",     # For RHEL 8 support
  "antsibull-docs @ git+https://github.com/cloudera-labs/antsibull-docs@cldr-docsite#egg=antsibull-docs",
  "ansible-pygments",
  "sphinx",
  "sphinx-ansible-theme >= 0.9.0",
  "antsichaut",
]

[tool.hatch.envs.docs.scripts]
build = "docsbuild/build.sh"
changelog = [
  # Read the version in galaxy.yml via hatch itself (normalizes release candidates, etc.)
  # Use 'hatch version' to manage the version, i.e. 'hatch version major,rc'
  "antsibull-changelog release --version $(hatch version)",
  "antsichaut --repository cloudera-labs/cloudera.exe --since_version=latest",
  "antsibull-changelog generate",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:AnsibleCollectionFinder has already been configured",
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[tool.hatch.envs.molecule]
python = "3.12"
detached = true
extra-dependencies = [
  "molecule",
  # "molecule-plugins",
  # "molecule-plugins[ec2]",
  "molecule-plugins @ git+https://github.com/ansible-community/molecule-plugins.git", # Fixes https://github.com/ansible-community/molecule-plugins/issues/239
  "boto",
  "boto3",
  "netaddr",
]

[tool.hatch.envs.molecule.scripts]
init = "terraform -chdir=tests/terraform init"
setup = "terraform -chdir=tests/terraform apply --auto-approve"
teardown = "terraform -chdir=tests/terraform destroy --auto-approve"
subnet = "terraform -chdir=tests/terraform output"
export-subnet = "echo 'export TEST_VPC_SUBNET_ID='$(terraform -chdir=tests/terraform output public_subnet)"
export-security-group = "echo 'export TEST_VPC_SECURITY_GROUP='$(terraform -chdir=tests/terraform output security_group)"

[build-system]
requires = [
  "hatchling",
  "hatch-semver",
]
build-backend = "hatchling.build"
